--- a/part2.html
+++ b/part2.html
@@ -1,7 +1,7 @@
-<Test>
+<!DOCTYPE html>
 <html>
-<body>
-<h1>New in this github</h1>
-<p>How is it suppose to work? I don't really get it</p>
-</body>
+  <body>
+    <h1>New in this github</h1>
+      <p>How is it suppose to work? I don't really get it</p>
+  </body>
 </html>
