--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
   <h2>Hello World!</h2>
-  <p>I'm hosted with Github Pages. See my page about <a href:"https://clemh06.github.io/my_new_project/bad_religion.html"> Bad Religion</a></p>
+  <p>I'm hosted with Github Pages. See my page about <a href="https://clemh06.github.io/my_new_project/bad_religion.html"> Bad Religion</a></p>
 </body>
 </html>
