--- a/bad_religion.html
+++ b/bad_religion.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UFT-8">
+class = green
 	<body>
 		<title>Bad Religion</title> 
 			
@@ -10,13 +11,23 @@
 			<h2> 1. Histoire du groupe </h2>
 			</header>
 			
-			<p> Le groupe est originaire de <i>San Fernando Valley</i>, Los Angeles, en Californie. Il est connu pour ses chansons aux paroles critiques envers la société. 
-Ils sont considérés comme l'un des meilleurs groupes de <a href= "https://fr.wikipedia.org/wiki/Punk_rock">punk rock</a> de tous les temps, avec <strong>cinq millions d'albums</strong> vendus à l'international5.
-Bad Religion se construit une réputation underground aux États-Unis avec ses premiers albums (dont <b class="song">Suffer</b>, <b class="song">No Control</b>, <b class="song">Against the Grain</b> et <b class="song">Generator</b>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.
-Leur popularité s'accroit avec la sortie d'un septième album et aussi premier chez une major, <a href="https://fr.wikipedia.org/wiki/Recipe_for_Hate">Recipe for Hate</a>, qui atteint la 14e place des Billboard Top Heatseekers6.
-Recipe for Hate est suivi une année plus tard, par Stranger than Fiction, qui comprend le single Infected et la version réenregistrée de 21st Century (Digital Boy)6, et est certifié disque d'or aux États-Unis et au Canada.
-Peu après la sortie de Stranger than Fiction, Gurewitz quitte Bad Religion pour diriger son propre label Epitaph Records à plein temps, et est remplacé par Brian Baker.
-Depuis le retour de Gurewitz en 2001, le groupe accroit de nouveau sa popularité avec la sortie d'un seizième album, True North (2013), qui atteint la 9e place du Billboard 2006. Le groupe annonce en 2015 un dix-septième album pour 2017
+			<p> Le groupe est originaire de <i>San Fernando Valley</i>, Los Angeles, en Californie. Il est connu pour ses chansons 
+			aux paroles critiques envers la société. Ils sont considérés comme l'un des meilleurs groupes de <a href= "https://fr.wikipedia.org/wiki/Punk_rock">punk rock</a> de tous les temps,
+			avec <strong>cinq millions d'albums</strong> vendus à l'international.</p>
+
+			<p>Bad Religion se construit une réputation underground aux États-Unis avec ses premiers albums
+			(dont <b class="song">Suffer</b>, <b class="song">No Control</b>, <b class="song">Against the Grain</b> et <b class="song">
+			Generator</b>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.</p>
+
+			<p>Leur popularité s'accroit avec la sortie d'un septième album et aussi premier chez une major, <a href="https://fr.wikipedia.org/wiki/Recipe_for_Hate">Recipe for Hate</a>,
+			qui atteint la 14e place des Billboard Top Heatseekers.
+			Recipe for Hate est suivi une année plus tard, par Stranger than Fiction, qui comprend le single Infected et la version 
+			réenregistrée de 21st Century (Digital Boy)6, et est certifié disque d'or aux États-Unis et au Canada.</p>
+
+			<p>Peu après la sortie de Stranger than Fiction, Gurewitz quitte Bad Religion pour diriger son propre label Epitaph Records 
+			à plein temps, et est remplacé par Brian Baker. Depuis le retour de Gurewitz en 2001, le groupe accroit de nouveau sa popularité 
+			avec la sortie d'un seizième album, True North (2013), qui atteint la 9e place du Billboard 2006. Le groupe annonce en 2015 
+			un dix-septième album pour 2017</p>
 	</body>
 </head>
 </html>
