--- a/bad_religion.html
+++ b/bad_religion.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="UFT-8">
-<class = "green">
 	<body>
 		<title>Bad Religion</title> 
 			
@@ -20,13 +19,13 @@
 			Generator</b>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.</p>
 
 			<p>Leur popularité s'accroit avec la sortie d'un septième album et aussi premier chez une major, <a href="https://fr.wikipedia.org/wiki/Recipe_for_Hate">Recipe for Hate</a>,
-			qui atteint la 14e place des Billboard Top Heatseekers.
+			qui atteint la <em>14e place des Billboard</em> Top Heatseekers.
 			Recipe for Hate est suivi une année plus tard, par Stranger than Fiction, qui comprend le single Infected et la version 
-			réenregistrée de 21st Century (Digital Boy)6, et est certifié disque d'or aux États-Unis et au Canada.</p>
+			réenregistrée de <b class="song">21st Century (Digital Boy)</b>, et est certifié disque d'or aux États-Unis et au Canada.</p>
 
-			<p>Peu après la sortie de Stranger than Fiction, Gurewitz quitte Bad Religion pour diriger son propre label Epitaph Records 
+			<p>Peu après la sortie de Stranger than Fiction, <a href="https://fr.wikipedia.org/wiki/Gurewitz_(musicien)">Gurewitz</a> quitte Bad Religion pour diriger son propre label <a href="http://epitathrecords.com">Epitaph Records</a> 
 			à plein temps, et est remplacé par Brian Baker. Depuis le retour de Gurewitz en 2001, le groupe accroit de nouveau sa popularité 
-			avec la sortie d'un seizième album, True North (2013), qui atteint la 9e place du Billboard 2006. Le groupe annonce en 2015 
+			avec la sortie d'un seizième album, <em>True North</em> (2013), qui atteint la 9e place du Billboard 2006. Le groupe annonce en 2015 
 			un dix-septième album pour 2017</p>
 	</body>
 </head>
