--- a/bad_religion.html
+++ b/bad_religion.html
@@ -15,11 +15,11 @@
 			avec <strong>cinq millions d'albums</strong> vendus à l'international.</p>
 
 			<p>Bad Religion se construit une réputation underground aux États-Unis avec ses premiers albums
-			(dont <b class="song">Suffer</b>, <b class="song">No Control</b>, <b class="song">Against the Grain</b> et <b class="song">
-			Generator</b>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.</p>
+			(dont <em class="song">Suffer</em>, <em class="song">No Control</em>, <em class="song">Against the Grain</em> et <em class="song">
+			Generator</em>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.</p>
 
 			<p>Leur popularité s'accroit avec la sortie d'un septième album et aussi premier chez une major, <a href="https://fr.wikipedia.org/wiki/Recipe_for_Hate">Recipe for Hate</a>,
-			qui atteint la <em>14e place des Billboard</em> Top Heatseekers.
+			qui atteint la <b>14e place des Billboard</b> Top Heatseekers.
 			Recipe for Hate est suivi une année plus tard, par Stranger than Fiction, qui comprend le single Infected et la version 
 			réenregistrée de <b class="song">21st Century (Digital Boy)</b>, et est certifié disque d'or aux États-Unis et au Canada.</p>
 
