--- a/bad_religion.html
+++ b/bad_religion.html
@@ -19,13 +19,13 @@
 			Generator</em>) avant de signer au label <a href="https://fr.wikipedia.org/wiki/Atlantic_Records">Atlantic Records</a> en 1993.</p>
 
 			<p>Leur popularité s'accroit avec la sortie d'un septième album et aussi premier chez une major, <a href="https://fr.wikipedia.org/wiki/Recipe_for_Hate">Recipe for Hate</a>,
-			qui atteint la <b>14e place des Billboard</b> Top Heatseekers.
+			qui atteint la <b>14e place des Billboard Top Heatseekers</b>.
 			Recipe for Hate est suivi une année plus tard, par Stranger than Fiction, qui comprend le single Infected et la version 
-			réenregistrée de <b class="song">21st Century (Digital Boy)</b>, et est certifié disque d'or aux États-Unis et au Canada.</p>
+			réenregistrée de <em class="song">21st Century (Digital Boy)</em>, et est certifié disque d'or aux États-Unis et au Canada.</p>
 
-			<p>Peu après la sortie de Stranger than Fiction, <a href="https://fr.wikipedia.org/wiki/Gurewitz_(musicien)">Gurewitz</a> quitte Bad Religion pour diriger son propre label <a href="http://epitathrecords.com">Epitaph Records</a> 
+			<p>Peu après la sortie de Stranger than Fiction, <a href="https://fr.wikipedia.org/wiki/Gurewitz_(musicien)">Gurewitz</a> quitte Bad Religion pour diriger son propre label <a href="http://epitath.com">Epitaph Records</a> 
 			à plein temps, et est remplacé par Brian Baker. Depuis le retour de Gurewitz en 2001, le groupe accroit de nouveau sa popularité 
-			avec la sortie d'un seizième album, <em>True North</em> (2013), qui atteint la 9e place du Billboard 2006. Le groupe annonce en 2015 
+			avec la sortie d'un seizième album, <em>True North</em> (2013), qui atteint la <b>9e place du Billboard 2006</b>. Le groupe annonce en 2015 
 			un dix-septième album pour 2017</p>
 	</body>
 </head>
