--- a/bad_religion.html
+++ b/bad_religion.html
@@ -11,7 +11,7 @@
 			</header>
 			
 			<p> Le groupe est originaire de <i>San Fernando Valley</i>, Los Angeles, en Californie. Il est connu pour ses chansons 
-			aux paroles critiques envers la société. Ils sont considérés comme l'un des meilleurs groupes de <a href= "https://fr.wikipedia.org/wiki/Punk_rock">punk rock</a> de tous les temps,
+			aux paroles critiques envers la société.<br>Ils sont considérés comme l'un des meilleurs groupes de <a href= "https://fr.wikipedia.org/wiki/Punk_rock">punk rock</a> de tous les temps,
 			avec <strong>cinq millions d'albums</strong> vendus à l'international.</p>
 
 			<p>Bad Religion se construit une réputation underground aux États-Unis avec ses premiers albums
