--- a/bad_religion.html
+++ b/bad_religion.html
@@ -29,6 +29,10 @@
 			à plein temps, et est remplacé par Brian Baker. Depuis le retour de Gurewitz en 2001, le groupe accroit de nouveau sa popularité 
 			avec la sortie d'un seizième album, <em>True North</em> (2013), qui atteint la <b>9e place du Billboard 2006</b>. Le groupe annonce en 2015 
 			un dix-septième album pour 2017</p>
+			
+			<p><em>The text content of this site was lovingly borrowed from the Wikipedia article on Bad Religion on 2 May 2019 under 
+			the Creative Commons Attribution-ShareAlike License.<br> Licensing terms of content from other sources (photos, etc.) 
+			is noted along with each respective resource.</em></p>
 	</body>
 </head>
 </html>
