--- a/bad_religion.html
+++ b/bad_religion.html
@@ -30,8 +30,8 @@
 			avec la sortie d'un seizième album, <em>True North</em> (2013), qui atteint la <b>9e place du Billboard 2006</b>. Le groupe annonce en 2015 
 			un dix-septième album pour 2017</p>
 			
-			<p><em>The text content of this site was lovingly borrowed from the Wikipedia article on Bad Religion on 2 May 2019 under 
-			the Creative Commons Attribution-ShareAlike License.<br> Licensing terms of content from other sources (photos, etc.) 
+			<p><em>The text content of this site was lovingly borrowed from the Wikipedia article on <a href="https://fr.wikipedia.org/wiki/Bad_Religion"Bad Religion</a> on 2 May 2019 under 
+			the <a href="https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License">Creative Commons Attribution-ShareAlike License</a>.<br> Licensing terms of content from other sources (photos, etc.) 
 			is noted along with each respective resource.</em></p>
 	</body>
 </head>
