--- a/bad_religion.html
+++ b/bad_religion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 <meta charset="UFT-8">
 	<body>
@@ -31,9 +31,11 @@
 			
 			<img src="bad-religion_1920.jpg" alt="bad religion band" width="960" height="384">
 			
+			<footer>
 			<p><em>The text content of this site was lovingly borrowed from the Wikipedia article on <a href="https://fr.wikipedia.org/wiki/Bad_Religion">Bad Religion</a> on 2 May 2019 under 
 			the <a href="https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License">Creative Commons Attribution-ShareAlike License</a>.<br> Licensing terms of content from other sources (photos, etc.) 
 			is noted along with each respective resource.</em></p>
+			</footer>
 	</body>
 </head>
 </html>
