--- a/bad_religion.html
+++ b/bad_religion.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UFT-8">
-	<body>
-		<title>Bad Religion</title> 
-			
+<title>Bad Religion</title> 
+<meta charset="UTF-8">
+</head>
+	<body>		
 			<header>
 			<h1><strong> Bad Religion</strong></h1>
 			<h2> 1. Histoire du groupe </h2>
@@ -37,5 +37,4 @@
 			is noted along with each respective resource.</em></p>
 			</footer>
 	</body>
-</head>
 </html>
